<resources>
    <string name="app_name">Space Fight</string>
    <string name="playText">Play</string>
    <string name="points">Score :</string>
    <string name="Difficulty">Difficulty</string>
    <string name="easyLevel">Easy</string>
    <string name="normalLevel">Normal</string>
    <string name="hardLevel">Hard</string>
    <string name="soundOn">Turn on sound</string>
    <string name="soundOff">Turn off sound</string>
    <string name="playerNameHint">Please enter your name</string>
    <string name="saveBtn">Save</string>
    <string name="scoreBoardBtn">Scoreboard</string>
    <string name="backBtn">Back</string>
</resources>