<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Levels"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easyLevel"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:onClick="difficultyMenu"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normalLevel"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:onClick="difficultyMenu"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardLevel"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:onClick="difficultyMenu"
            />
        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/backBtn"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            />

    </LinearLayout>

</LinearLayout>