<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playImage"
            android:background="@drawable/play"
            android:onClick="startGame"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/playText"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:onClick="startGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Difficulty"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:id="@+id/difficultyButton"
        android:onClick="difficultyMenu"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundOff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:id="@+id/soundButton"
        android:onClick="startPauseMusic"
        android:textAllCaps="true"
        />

</LinearLayout>